# sandbox

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
journal/: _template.md  day02_delta_vs_parquet.md
labs/: day01_polars_benchmark.py
labs/day02_delta_vs_parquet/: README.md  __init__.py  config.py  day02_delta_vs_parquet.py  exp01_schema_enforcement.py  exp02_partitioning.py  exp03_multi_file_aggregation.py  exp04_schema_evolution.py  exp05_compression.py  run_all.py
labs/day03_prefect/: 01_getting_started.py  exp01_basic_flow.py  exp02_retry_strategies.py
labs/day04_pubsub/: README.md  day04_pubsub_sim.py  dedup_strategies.py  performance_monitor.py  run_comparison.py
labs/day05_configdriven/: .envrc.example  QUICKSTART.md  README.md  SETUP.md  run_pipeline.py
labs/day05_configdriven/config/: pipeline.yaml
labs/day05_configdriven/config/sources/: file.yaml  pubsub.yaml
labs/day05_configdriven/flows/: __init__.py  pipeline.py
labs/day05_configdriven/flows/tasks/: __init__.py  generate.py  process.py
labs/day05_configdriven/src/: config_loader.py
labs/day05_configdriven/src/monitoring/: __init__.py  performance.py
labs/day05_configdriven/src/sources/: __init__.py  base.py  file.py  polars_synthetic.py  pubsub.py
labs/day05_configdriven/src/strategies/: __init__.py  base.py  dedup.py
labs/day05_configdriven/src/utils/: logging_config.py
labs/day05_configdriven/tests/: test_config.py
