[project]
name = "sandbox"
version = "0.1.0"
description = "Structured learning and experimentation environment for data systems."
requires-python = ">=3.12"
dependencies = [
  "polars",
  "pyarrow",
  "pandas",
  "duckdb",
  "prefect",
  "pulumi",
  "rich",
  "tabulate",
]

[dependency-groups]
dev = [
  "pre-commit",
  "black",
  "ruff",
  "pytest",
]

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "PL", "W"]
ignore = ["E203"]
fix = true

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py"]